--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 «Шальные годы Монпарнаса»
               </p>
             </article>
-            <article class="reviews">
+            <article class="reviews flex">
               <img class="reviews__img active" src="files/anatomy.jpg" alt="">
               <h3 class="reviews__title "><a class="reviews__link active-link" href="#">Анатомия за 30 секунд</a></h3>
               <p class="reviews__text">
@@ -63,7 +63,7 @@
                 к научно‑популярной литературе заметно вырос
               </p>
             </article>
-            <article class="reviews">
+            <article class="reviews flex">
               <img class="reviews__img" src="files/spheroidal_freaks.jpg" alt="">
               <h3 class="reviews__title"><a class="reviews__link" href="#">Сферические чудаки</a></h3>
               <p class="reviews__text">
